<resources>
    <string name="app_name">Ardu_Security</string>
    <string name="prefs_file">com.ardusec.ardu_security.PREFERENCE_FILE_KEY</string>
    <string name="firebase_web_client_id">221885248757-g3mm3pnnnanhlqh7anbf28htakoi0vae.apps.googleusercontent.com</string>
    <!--Strings de la vista de login-->
    <string name="imgLogo">AppLogoImage</string>
    <string name="lblAcces">Elegir metodo de acceso:</string>
    <string name="btnAccUsPass">Correo</string>
    <string name="btnAccGoogle">Google</string>
    <string name="txtUsName">Username</string>
    <string name="txtEmail">Correo</string>
    <string name="txtPass">Contraseña</string>
    <string name="chbPass">Mostrar</string>
    <string name="btnLogEma">Acceder con Correo</string>
    <string name="btnLogGoo">Acceder con Google</string>
    <string name="btnLstCPass">¿Olvido su Contraseña?</string>
    <string name="lblReg">Registrarse</string>
    <string name="btnRegCor">Correo</string>
    <string name="btnRegGoo">Google</string>
    <string name="lblCopyright">Ardu Security 2023\n Copyright © Todos los derechos reservados</string>
    <!-- Botones de ayuda y aviso de carga-->
    <string name="btnHelp">Boton Ayuda</string>
    <string name="lblCarga">Cargando…</string>
    <!-- Strings de la vista de olvido su contraseña -->
    <string name="LblForPass">Recuperar Contraseña</string>
    <string name="headLblForPass">Ingrese los datos solicitados:</string>
    <string name="txtNombre">Nombre Completo</string>
    <string name="txtIngreCorr">Direccion de correo</string>
    <string name="lblPreg">Pregunta Clave</string>
    <string-array name="lstSavQues">
        <item>Seleccione su pregunta clave</item>
    </string-array>
    <string name="txtRespKey">Respuesta clave</string>
    <string name="btnComproResp">Enviar Recuperacion</string>
    <string name="msgRecEma">Procesando Solicitud…</string>
    <!-- Strings de la vista dashboard -->
    <string name="headDash">Menú Principal</string>
    <string name="btnShowHideSis">Mostrar/Ocultar\nSeleccion Sistema</string>
    <string name="lblSelSis">Seleccione el sistema de la sesion</string>
    <string name="btnEstaciones">Estaciones</string>
    <string name="btnReportes">Reportes</string>
    <string name="btnAjus">Ajustes</string>
    <string name="btnManu">Manual de \n Usuario</string>
    <string name="btnGesSis">Gestionar \n Sistema</string>
    <string name="btnCloSes">Cerrar Sesion</string>
    <!-- Strings de cada vista de estacion -->
    <string name="headEsta">Estaciones</string>
    <string name="btnSta1">Estacion 1</string>
    <string name="btnSta2">Estacion 2</string>
    <string name="btnSta3">Estacion 3</string>
    <string name="btnSta4">Estacion 4</string>
    <string name="btnSta5">Estacion 5</string>
    <string name="btnAlarma">Gestionar \n alarma</string>
    <!-- Strings de la vista de registro -->
    <string name="headRegi">Registro</string>
    <string name="txtNam">Nombre Completo</string>
    <string name="lblTipReg">Elegir metodo de registro:</string>
    <string name="btnRegEma">Registrar con Correo</string>
    <string name="btnRegGo">Registrar con Google</string>
    <string name="txtRespQues">Respuesta pregunta clave:</string>
    <string name="lblTipUser">Seleccione el tipo de usuario:</string>
    <string name="rbUserGen">Cliente</string>
    <string name="rbUserAdmin">Administrador</string>
    <string name="txtPhone">Numero Telefonico</string>
    <string-array name="lstSistems">
        <item>Seleccione su Sistema</item>
    </string-array>
    <string name="btnReg">Registrar</string>
    <!-- Strings de la vistas de estaciones-->
    <string name="lblStaHead">Accesos de:</string>
    <string name="btnCam">Camara</string>
    <string name="btnSenGH">Sensor de\n Gas/Humo</string>
    <string name="btnSenMag">Sensor\n Magnetico</string>
    <!-- Strings de las graficas-->
    <string name="lblBtnGrafi">Seleccione el sensor que desea ver:</string>
    <string name="lblBtnCO">CO</string>
    <string name="lblBtnGLP">GLP</string>
    <string name="lblBtnProp">Propano</string>
    <string name="lblBtnHumo">Humo</string>
    <!-- Strings de la vistas de las camaras-->
    <string name="lblCamView">Camara</string>
    <!-- Strings de la vistas de los sensores-->
    <string name="lblSensGraf">Grafica del Sensor de Gases</string>
    <string name="lblCondMagne">Sensor Magnetico</string>
    <string name="lblMagneAbi">Abierto</string>
    <string name="lblMagneCerr">Cerrado</string>
    <!-- Strings de la vista del perfil-->
    <string name="headPerfi">Datos del Usuario</string>
    <string name="lblName">Nombre: </string>
    <string name="lblUser">Usuario: </string>
    <string name="lblNameVal">Nombre del usuario</string>
    <string name="lblUserVal">Username </string>
    <string name="btnEditNombre">Cambiar\nNombre</string>
    <string name="btnEditCorreo">Cambiar\nCorreo</string>
    <string name="btnEditUsername">Cambiar\nNombre de\nUsuario</string>
    <string name="btnEditContra">Cambiar\nContraseña</string>
    <string name="btnEditPregun">Cambiar\nPregunta</string>
    <string name="btnEditRespu">Cambiar\nRespuesta</string>
    <string name="btnEditSisRel">Cambiar\nSistema</string>
    <string name="btnEditTipUser">Cambiar Tipo\nde Usuario</string>
    <string name="btnDelCuenta">Eliminar\nCuenta\nde Usuario</string>
    <string name="lblHeadDelCuenta">Confirmar Eliminación</string>
    <string name="btnConfDelCuenta">Eliminar</string>
    <string name="btnEditTel">Cambiar\nTelefono</string>
    <!-- Strings de la vista de ajustes-->
    <string name="headAjus">Ajustes</string>
    <string name="btnTema">Seleccionar Tema App</string>
    <string name="btnEdit">Editar\nInformación\nde Usuario</string>
    <string name="btnNoti">Gestionar\nNotificaciones</string>
    <string name="btnCommSis">Opiniones\ndel Sistema</string>
    <string name="btnAbout">Acerca de…</string>
    <!-- Strings de la vistas de edicion de campos-->
    <string name="headEdit">Editar </string>
    <string name="lblOldVal">Valor Previo: </string>
    <string name="txtViejo">Valor Guardado</string>
    <string name="lblNewVal">Nuevo Valor: </string>
    <string name="txtNuevoGen">Ingrese su nuevo dato</string>
    <string name="txtNuevoCorr">Ingrese su nuevo correo</string>
    <string name="txtNuevoTel">Ingrese su nuevo telefono</string>
    <string name="txtNuevaPass">Ingrese su nueva contraseña</string>
    <string name="lblSelProv">Seleccione el proveedor con el que desea operar:</string>
    <string name="lblRbCorr">Correo</string>
    <string-array name="lstTipUs">
        <item>Seleccione su tipo de usuario</item>
        <item>Cliente</item>
        <item>Administrador</item>
    </string-array>
    <string name="lblConfCamb">Confirmar Cambio: </string>
    <string name="txtConfEma">Ingrese su correo actual</string>
    <string name="txtConfCamb">Ingrese su contraseña actual</string>
    <string name="lblPregunta">Pregunta de Seguridad</string>
    <string name="txtRespuesta">Ingrese su respuesta</string>
    <string name="btnConfEdit">Actualizar</string>
    <!-- Strings de la vista de alarma-->
    <string name="lblEncaAla">Encender / Apagar</string>
    <string name="rbPrendeAl">Prender Alarma</string>
    <string name="rbApagaAl">Apagar Alarma</string>
    <string name="btnChgEstAl">Establecer estado</string>
    <string name="lblCondAla">Condicion de Alarma:</string>
    <string name="condActiAl">Accionada</string>
    <string name="condOperAl">Operando</string>
    <string name="condInacAl">Inhabilitada</string>
    <!-- Strings de la vista de generar reportes-->
    <string name="headRepo">Generar Reportes</string>
    <string name="lblEstaciones">Seleccione su estacion:</string>
    <string name="lblSensor">Seleccione el sensor:</string>
    <string name="rbSenGLP">Gas LP</string>
    <string name="rbSCO">Monoxido de Carbono (CO)</string>
    <string name="rbSenProp">Gas Propano</string>
    <string name="rbSenHumo">Humo</string>
    <string name="lblRango">Seleccione el periodo de monitoreo deseado:</string>
    <string name="calIni">Inicio:</string>
    <string name="lblFechaIni">Fecha de Inicio:</string>
    <string name="lblHoraIni">Hora de Inicio:</string>
    <string name="btnSelFechaIni">Seleccione la Fecha de Inicio</string>
    <string name="btnSelHoraIni">Seleccione la Hora de Inicio</string>
    <string name="calFin">Fin:</string>
    <string name="lblFechaFin">Fecha de Fin:</string>
    <string name="lblHoraFin">Hora de Fin:</string>
    <string name="btnSelFechaFin">Seleccione la Fecha de Fin</string>
    <string name="btnSelHoraFin">Seleccione la Hora de Fin</string>
    <string name="lblValFecha">Valor Fecha Seleccionado</string>
    <string name="lblValHora">Valor Hora Seleccionado</string>
    <string name="btnGenGrafRepo">Generar Vista Previa\ndel Reporte</string>
    <string name="lblViewRepo">Vista Previa del Reporte a Generar</string>
    <string name="btnGenRepo">Generar Reporte</string>
    <!-- Strings de la vista comentarios-->
    <string name="headComms">Generar Comentario</string>
    <string name="lblOp">Comentario:</string>
    <string name="btnSendComm">Enviar Comentario</string>
    <!-- Strings de la vista de manejo de sistema admin-->
    <string name="headMenSis">Gestion del Sistema</string>
    <string name="btnUpSisNam">Cambiar\nNombre</string>
    <string name="btnUpSisSta">Administrar\nEstaciones</string>
    <string name="btnUpSisUse">Administrar\nUsuarios</string>
    <string name="btnUpSisAla">Gestionar\nAlarma</string>
    <!-- Strings de la vista de manejo de usuarios admin-->
    <string name="headMenSisUs">Gestion de Usuarios</string>
    <string name="lblListUsSis">Estos son los usuarios pertenencientes al sistema:</string>
    <string-array name="lstUsersSis">
        <item>Seleccione el usuario…</item>
    </string-array>
    <string name="lblTipoUsSel">Tipo:</string>
    <string name="btnDelSisUser">Eliminar\nUsuario\ndel Sistema</string>
    <!-- Strings de la vista de manejo de estaciones admin-->
    <string name="headMenSisSta">Gestion de Estaciones</string>
    <string name="lblListStaSis">Estas son las estaciones pertenencientes al sistema:</string>
    <string-array name="lstStaSis">
        <item>Seleccione la estación…</item>
    </string-array>
    <string name="lblDirEsta">Direcion IP:</string>
    <string name="btnHabiChgNomEsta">Habilitar\nActualización\ndel Nombre</string>
    <string name="btnChgNomEsta">Confirmar\nActualización\ndel Nombre</string>
    <string name="btnHabiChgDirEsta">Habilitar\nActualización\nde la\nDirección IP</string>
    <string name="btnChgDirEsta">Confirmar\nActualización\nde la\nDirección IP</string>
    <!-- Strings de la plantilla de reportes-->
    <string name="lblHeadRepo">Reporte del Sensor:\n</string>
    <string name="lblRangoRepo">Registros entre:</string>
    <string name="lblFechaIniRepo">FechaIni</string>
    <string name="lblHoraIniRepo">HoraIni</string>
    <string name="lblFechaFinRepo">FechaFin</string>
    <string name="lblHoraFinRepo">HoraFin</string>
    <string name="lblFechaHora">Fecha/Hora</string>
    <string name="lblValRegistro">Valor (ppm)</string>
    <string name="lblHeadGrafRepo">Grafica del Sensor</string>
    <!-- Strings de la plantilla del manual-->
    <string name="lblHeadManual">Manual de Usuario</string>
    <string name="btnGetManu">Descargar Manual</string>
</resources>