<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/azulAlicia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <ScrollView
        android:id="@+id/UserView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/azulAlicia">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblHeadUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/headPerfi"
                android:textSize="24sp"
                android:visibility="visible"
                android:textColor="@color/negro" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/lblNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblName"
                    android:textSize="15sp"
                    android:textColor="@color/negro" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/lblNomVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblNameVal"
                    android:textSize="15sp"
                    android:textColor="@color/negro" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/lblUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblUser"
                    android:textSize="15sp"
                    android:textColor="@color/negro" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/lblUserVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblUserVal"
                    android:textSize="15sp"
                    android:textColor="@color/negro" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnEditNam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditNombre"
                android:textSize="20sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditCorr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditCorreo"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditUsername"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditContra"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditPreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditPregun"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditResp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditRespu"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditSisRel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditSisRel"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditUsNam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditUsername"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditTipUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditTipUser"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnEditTele"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditTele"
                android:textSize="20sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>