<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollForgPass"
    android:background="@color/azulAlicia"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblFgtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/headLblForPass"
        android:textSize="20sp"
        android:visibility="visible"
        android:textColor="@color/negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInfoRecPass"
        android:layout_width="49dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btnHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toEndOf="@+id/lblFgtPass"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LlRecPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/lblFgtPass">

        <EditText
            android:id="@+id/txtNomForPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:autofillHints="name"
            android:drawableStart="@drawable/user"
            android:drawableTint="@color/negro"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName"
            android:textColor="@color/negro"
            android:textColorHint="@color/darkgray"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txtEmaForPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:autofillHints="email"
            android:drawableStart="@android:drawable/sym_action_email"
            android:drawableTint="@color/negro"
            android:hint="@string/txtIngreCorr"
            android:inputType="textEmailAddress"
            android:textColor="@color/negro"
            android:textColorHint="@color/darkgray"
            android:visibility="visible" />

        <TextView
            android:id="@+id/lblRespSel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/lblPreg"
            android:textColor="@color/negro"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/negro"
            app:cardCornerRadius="4dp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spSafQuKy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:textColor="@color/negro"
                android:dropDownWidth="wrap_content"
                android:entries="@array/lstSavQues"/>

        </com.google.android.material.card.MaterialCardView>

        <EditText
            android:id="@+id/txtResPregKey"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="name"
            android:drawableStart="@drawable/stylus_note"
            android:drawableTint="@color/negro"
            android:hint="@string/txtRespKey"
            android:inputType="textPersonName"
            android:textColor="@color/negro"
            android:textColorHint="@color/darkgray"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btnComproResp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/lblRespPeti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgRecEma"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor="@color/negro"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>